Scrollbares Dorf, Rest ist fix!
Die Sidebar und das Menü bleiben jetzt fix! Scrollen geht nur noch in
der letzten Spalte (dem Dorf)

--- a/game.css
+++ b/game.css
@@ -40,4 +40,7 @@ body {
 
 #village {
 	background-color: green;
+	position: absolute;
+	overflow: scroll;
+	height: 100%;
 }
